@@ -1,3 +1,5 @@
+3581.	[bug]		Changed the tcp-listen-queue default to 10. [RT #33029]
+
 3580.	[bug]		Addressed a possible race in acache.c [RT #33602]
 
 3579.	[maint]		Updates to PKCS#11 openssl patches, supporting
